[project]
name = "time-series-forecasting"
version = "0.1.0"
description = "Time series forecasting project using tsfresh"
readme = "README.md"
requires-python = "~=3.9.0"

dependencies = [
    "numpy",
    "pandas",
    "tsfresh",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "joblib",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "xgboost",
    "sktime",
    "skforecast",
    "darts",
    "pmdarima",
    "numba==0.56.4",
    "llvmlite==0.39.1",
    "huggingface-hub==0.26.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/time_series_forecasting"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
